# erc-software-basestation

./: .gitignore  .gitmodules  package.json  tsconfig.json
fake_camera/: Cargo.toml
fake_camera/src/: main.rs
fake_camera_gstreamer/: Cargo.toml
fake_camera_gstreamer/src/: main.rs
src/: components.css  global.css  imu.css  model.css  navbar.css  state.svelte.js  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proto-old/: message.proto
src-tauri/src/: lib.rs  main.rs  proto.rs
src-tauri/src/commands/: checks.rs  controller.rs  file_management.rs  gstreamer.rs  load_model.rs  maps.rs  mod.rs  network.rs  rover_commands.rs  rover_states.rs  save_data.rs  video.rs
src-tauri/src/network/: listener.rs  mod.rs  sender.rs  service.rs
src/lib/components/: SampleField.svelte  costmap.svelte  double_video.svelte  imu.svelte  interest_locations.svelte  maintenance_tasks.svelte  map.svelte  model_debug.ts  model_scene.svelte  model_viewer.svelte  navigation_plan.svelte  probes.svelte  sampling_locations.svelte  task_completion.svelte  video.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/maintenance/: +page.svelte
src/routes/navigation/: +page.svelte
src/routes/probing/: +page.svelte
src/routes/science/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: map.ts  samples.ts
