[package]
name = "base_station"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "base_station_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0  "
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1"
anyhow = "1"        # For simple error handling
async-stream = "0.3"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-dialog = "2.6.0"
image = "0.24"
gstreamer = "0.22"
gstreamer-video = "0.22"
gstreamer-app = "0.22"
warp = "0.3"
futures-util = "0.3.31"
chrono = "0.4.43"
dirs = "6.0.0"
